Bug 412690: Drafts/Templates/Outbox should be excluded from the retention policy. r+sr=bienvenu